# StorayBoatTTSGateway

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/storayboat_tts_gateway/: api_models.py  app.py
src/storayboat_tts_gateway/providers/: base.py  edge_provider.py  kokoro_provider.py
src/storyboat_tts_gateway/: app.py
src/storyboat_tts_gateway/providers/: kokoro_provider.py
tests/: test_app.py  test_edge_provider.py  test_kokoro_fallback.py  test_kokoro_provider.py  test_request_model.py
